--- a/frontend/src/app/pages/form-registro/form-registro.component.html
+++ b/frontend/src/app/pages/form-registro/form-registro.component.html
@@ -1,51 +1,17 @@
-<section id="speaker" class="pt-4 pb-4">
+<section class="pt-4 pb-4">
     <div class="container">
-        <div class="row">
-            <div class="col text-uppercase text-center">
+        <div class="text-uppercase text-center nam">
+            <form (ngSubmit)="Guardar()" #f="ngForm" class="form">
                 <h2>Proveedor</h2>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col">
-                <form>
-                    <div class="form-group">
-                        <input id="documento_pro" type="text" class="form-control " placeholder="Numero De Documento ">
-                    </div>
-
-                    <div class="row ">
-                        <div class="col-4 mb-2 m-auto ">
-                            <input type="text " class="form-control " placeholder="Nombre ">
-                        </div>
-                    </div>
-                    <div class="row ">
-                        <div class="col-4 mb-2 m-auto ">
-                            <input type="text " class="form-control " placeholder="Apellido ">
-                        </div>
-                    </div>
-                    <div class="row ">
-                        <div class="col-4 mb-2 m-auto ">
-                            <input type="text " class="form-control " placeholder="Correo Electronico ">
-                        </div>
-                    </div>
-                    <div class="row ">
-                        <div class="col-4 mb-2 m-auto ">
-                            <input type="text " class="form-control " placeholder=" Direccion ">
-                        </div>
-                    </div>
-                    <div class="row ">
-                        <div class="col-4 mb-2 m-auto ">
-                            <input type="text " class="form-control " placeholder="Vehiculos Disponibles ">
-                        </div>
-                    </div>
-
-                    <div class="row ">
-                        <div class="col-4 mt-4 m-auto d-grid ">
-                            <button (click)="Guardar()" type="submit" class="btn btn-success ">Guardar</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+                <hr class=" ">
+                <input [(ngModel)]=" proveedor.documento_pro " name="documento_pro " type="number" class="form-control my-3 " placeholder="Numero De Documento ">
+                <input [(ngModel)]="proveedor.name_pro " name="name_pro " type="text " class="form-control my-3 " placeholder="Nombre ">
+                <input [(ngModel)]="proveedor.apellido_pro " name="apellido_pro " type="text" class="form-control my-2 " placeholder="Apellido ">
+                <input [(ngModel)]="proveedor.email_pro " name="email_pro " type="text" class="form-control my-3 " placeholder="Correo Electronico ">
+                <input [(ngModel)]="proveedor.direccion_pro " name="direccion_pro " type="text" class="form-control my-3 " placeholder=" Direccion ">
+                <input [(ngModel)]="proveedor.vehiculos_pro " name="vehiculos_pro " type="number" class="form-control my-3 " placeholder="Vehiculos Disponibles ">
+                <button type="submit " class="btn btn-outline-success bii mt-5 ">Guardar</button>
+            </form>
         </div>
     </div>
 </section>
