--- a/frontend/src/app/pages/listar/listar.component.html
+++ b/frontend/src/app/pages/listar/listar.component.html
@@ -1,4 +1,6 @@
 <div class="container pt-4">
+    <h2 class="text-center">PROVEEDORES</h2>
+    <hr class=" ">
     <table class=" table mt-4 bor">
         <tbody>
             <tr>
@@ -33,11 +35,11 @@
                 <td class="text-center">{{proveedor.vehiculos_pro}}</td>
                 <td>
                     <div class="row align-items-start">
-                        <div class="col align-self-center ms-3">
-                            <button type=" button " class="btn btn-outline-warning " (click)="Editar(proveedor) ">Editar</button>
+                        <div class="col align-self-center ">
+                            <button type=" button " class="btn btn-outline-warning dd" (click)="Editar(proveedor) ">Editar</button>
                         </div>
                         <div class="col align-self-center">
-                            <button type="button " class="btn btn-outline-danger " (click)="Eliminar(proveedor) ">Eliminar</button>
+                            <button type="button " class="btn btn-outline-danger dd" (click)="Eliminar(proveedor) ">Eliminar</button>
                         </div>
                     </div>
                 </td>
