--- a/frontend/src/app/pages/listar/listar.component.html
+++ b/frontend/src/app/pages/listar/listar.component.html
@@ -28,7 +28,7 @@
             </tr>
             <tr *ngFor="let proveedor of proveedores ">
                 <td class="text-center">{{proveedor.documento_pro}}</td>
-                <td class="text-center">{{proveedor.name_pro}}</td>
+                <td class="text-center">{{proveedor.nombre}}</td>
                 <td class="text-center">{{proveedor.apellido_pro}}</td>
                 <td class="text-center">{{proveedor.email_pro}}</td>
                 <td class="text-center">{{proveedor.direccion_pro}}</td>
