--- a/frontend/src/app/pages/buscar/buscar.component.css
+++ b/frontend/src/app/pages/buscar/buscar.component.css
@@ -3,7 +3,6 @@
 }
 
 .form {
-    width: 40%;
     height: auto;
     margin: auto;
     padding: 30px;
@@ -33,9 +32,16 @@ th {
 }
 
 .ww {
-    width: 20%;
+    width: 40%;
 }
 
 .dd {
     width: 100%;
+}
+
+.inp {
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 60%;
 }
