--- a/frontend/src/app/pages/buscar/buscar.component.html
+++ b/frontend/src/app/pages/buscar/buscar.component.html
@@ -1,55 +1,79 @@
 <div class="container pt-4 ">
-    <div class="text-uppercase text-center nam">
-        <form (ngSubmit)="Buscar(documento_pro)" #f="ngForm" class="form">
-            <h2>Proveedor</h2>
-            <hr class=" ">
-            <div class="row align-items-start">
-                <div class="col ">
-                    <input [(ngModel)]="documento_pro" name="documento_pro " type="number" class="form-control" placeholder="Numero De Documento ">
-                    <button type="submit " class="btn btn-outline-success bii mt-2 ww ">Buscar</button>
-                </div>
-            </div>
-        </form>
+    <div class="row text-uppercase text-center nam">
+        <div class="col col-md-10 offset-md-1 col-lg-7 offset-lg-2 pt-2 " *ngIf="buscadordoc">
+            <button type="submit " (click)="bdoc()" class="btn btn-outline-primary mt-2 mb-3 ">Buscar Documento</button>
+        </div>
+        <div class="col col-md-10 offset-md-1 col-lg-7 offset-lg-2 pt-2 " *ngIf="buscadornom">
+            <button type="submit" (click)="bnom()" class="btn btn-outline-primary mt-2 mb-3 ">Buscar Nombre</button>
+        </div>
     </div>
-    <table class=" table mt-4 bor" *ngIf="user">
+    <div class="row text-uppercase text-center nam " *ngIf="formnom">
+        <div class="col col-md-10 offset-md-1 col-lg-7 offset-lg-2 pt-2 ">
+            <form (ngSubmit)=" BuscarNombre(nombre) " #f="ngForm" class="form">
+                <h2>Proveedor</h2>
+                <hr>
+                <div class="row align-items-start ">
+                    <div class="col ">
+                        <input [(ngModel)]="nombre" name="nombre" type="text" class="form-control inp" placeholder="Nombre">
+                        <button type="submit " class="btn btn-outline-success bii mt-2 ww ">Buscar Nombre</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row text-uppercase text-center nam" *ngIf="formdoc">
+        <div class="col col-md-10 offset-md-1 col-lg-7 offset-lg-2 pt-2 ">
+            <form (ngSubmit)=" Buscar(documento_pro) " #f="ngForm" class="form">
+                <h2>Proveedor</h2>
+                <hr>
+                <div class="row align-items-start">
+                    <div class="col ">
+                        <input [(ngModel)]="documento_pro" name="documento_pro " type="number" class="form-control inp" placeholder="Numero De Documento">
+                        <button type="submit" class="btn btn-outline-success bii mt-2 ww">Buscar Documento</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <table class=" table mt-4 bor " *ngIf="user">
         <tbody>
             <tr>
-                <th class="text-center"> Numero De Documento
+                <th class="text-center "> Numero De Documento
                 </th>
-                <th class="text-center">
+                <th class="text-center ">
                     Nombre
                 </th>
-                <th class="text-center">
+                <th class="text-center ">
                     Apellido
                 </th>
-                <th class="text-center">
+                <th class="text-center ">
                     Correo Electronico
                 </th>
-                <th class="text-center">
+                <th class="text-center ">
                     Dirección
                 </th>
 
-                <th class="text-center">
+                <th class="text-center ">
                     Vehiculos Disponiles
                 </th>
-                <th class="text-center">
+                <th class="text-center ">
                     Acciones
                 </th>
             </tr>
-            <tr *ngFor="let provee of proveedordata">
-                <td class="text-center">{{provee.documento_pro}}</td>
-                <td class="text-center">{{provee.name_pro}}</td>
-                <td class="text-center">{{provee.apellido_pro}}</td>
-                <td class="text-center">{{provee.email_pro}}</td>
-                <td class="text-center">{{provee.direccion_pro}}</td>
-                <td class="text-center">{{provee.vehiculos_pro}}</td>
+            <tr *ngFor="let provee of proveedordata ">
+                <td class="text-center ">{{provee.documento_pro}}</td>
+                <td class="text-center ">{{provee.nombre}}</td>
+                <td class="text-center ">{{provee.apellido_pro}}</td>
+                <td class="text-center ">{{provee.email_pro}}</td>
+                <td class="text-center ">{{provee.direccion_pro}}</td>
+                <td class="text-center ">{{provee.vehiculos_pro}}</td>
                 <td>
-                    <div class="row align-items-start">
+                    <div class="row align-items-start ">
                         <div class="col align-self-center ">
-                            <button type=" button " class="btn btn-outline-warning dd" (click)="Editar(provee)">Editar</button>
+                            <button type=" button " class="btn btn-outline-warning dd " (click)="Editar(provee) ">Editar</button>
                         </div>
                         <div class=" col align-self-center ">
-                            <button type="button " (click)="Eliminar(provee.documento_pro)" class=" btn btn-outline-danger dd ">Eliminar</button>
+                            <button type="button " (click)="Eliminar(provee.documento_pro) " class=" btn btn-outline-danger dd ">Eliminar</button>
                         </div>
                     </div>
                 </td>
